--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
 	"appid": "wx5a193d56fcdffe88",
-	"projectname": "vchat",
+	"projectname": "sd",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
