--- a/app.json
+++ b/app.json
@@ -1,26 +1,16 @@
 {
-  "pages":[
-    "pages/login/login",
-    "pages/logs/logs",
-    "pages/index/index"
+  "pages": [
+    "pages/logins/login/login",
+    "pages/logins/logs/logs",
+    "pages/logins/index/index",
+    "pages/logins/bind/bind",
+    "pages/home/index/index"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#67C23A",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  },
-  "tabBar": {
-    "list": [
-      {
-        "pagePath": "pages/login/login",
-        "text": "首页"
-      },
-      {
-        "pagePath": "pages/logs/logs",
-        "text": "日志"
-      }
-    ]
+    "navigationBarTextStyle": "black"
   },
   "networkTimeout": {
     "request": 10000,
